# Village

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  Cargo.toml  D&DSheet.txt  README.md  rustfmt.toml
src/: config.rs  main.rs  state.rs
src/cfg/: mod.rs
src/com/: mod.rs
src/core/: mod.rs  mov.rs  move.rs
src/ent/: mod.rs
src/grx/: mod.rs
src/res/: cfg.rs  mgr.rs  mod.rs  tex.rs
src/stm/: mod.rs
src/sys/: mov.rs
