


[package]
name = "village"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[unstable]



[patch.crates-io]
ggez = { path = "libs/ggez" }
serde = { path="libs/serde/serde" }
wgpu = { path="libs/wgpu/wgpu" }


[dependencies]
anyhow = "1.0"
env_logger = "0.10.0"
ggez = "0.8.1"
log = "0.4.17"
rand = "0.8.5"
semeion = { version = "0.9.1", features = ["parallel"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
im = { version = "*", features = ["proptest", "serde", "rayon"] }
